<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"

    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="@drawable/tvset"
        android:layout_gravity="center_horizontal"
        android:id="@+id/imageView2" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:id="@+id/login" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/pass"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:id="@+id/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missing_pass"
        android:layout_gravity="right"
        android:id="@+id/missing_password" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/sign_in" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel"
            android:id="@+id/cancel" />

    </LinearLayout>

</LinearLayout>