<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/daily_load" android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/daily_load" />
        <item android:id="@+id/price_calc" android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/calc" />
        <item android:id="@+id/about_us" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/about_us" />
        <!--<item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>

   <!-- <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>